--- a/pet/pet.css
+++ b/pet/pet.css
@@ -116,7 +116,8 @@ ul {
     line-height:1.6rem;
     color:#333;
     background-color: #fff;
-    overflow-y: scroll;
+    overflow-y:visible;
+    overflow-x:hidden;
 }
 
 h1{
@@ -262,4 +263,23 @@ a {
     color:rgba(244,48,72,0.5);
     text-decoration: none;
     
+}
+
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 0px;
+	background-color: #FFF;
+}
+
+::-webkit-scrollbar
+{
+	width: 5px;
+	background-color: #fff;
+}
+
+::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+	border: 2px solid #aaa;
 }
